# auth

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
docs/: openapi.yaml
migrations/: 20251220192613_create_users_table.sql
proto/: auth.proto
src/: app.rs  config.rs  errors.rs  handlers.rs  main.rs  model.rs
src/delivery_grpc/: mod.rs  users_delivery.rs
src/delivery_http/: dto.rs  mod.rs  register.rs  users_delivery.rs
src/infra/: postgres.rs  redis.rs
src/repo/: mod.rs  sessions.rs  users_repo.rs
src/usecase/: mod.rs  users_usecase.rs
