[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" , "chrono", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }
tower = "0.5.2"
thiserror = "2.0.17"
axum-extra = { version = "0.12.2", features = ["cookie"] }
async-trait = "0.1.89"
log = "0.4.29"
dotenvy = "0.15.7"
argon2 = { version = "0.5.3", features = ["std"] }